FIX- scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,14 @@ h5 {
 }
 
 /* main */
-
+#left main {
+    height: 90%;
+    min-height: 50%;
+}
+#left .container-main {
+    height: 100%;
+    min-height: 50%;
+}
 /* adv-notifiche */
 #adv-notifiche {
     display: flex;
@@ -133,24 +140,26 @@ h5 {
 #chat-list {
     background-color: white;
     font-size: 27px;
-    height: 100%;
+    height: 79%;
+    min-height: 50%;
 }
-.box-chat ul {
-    max-height: 300px;
+#chat-list ul {
     overflow-y: scroll;
+    height: 100%;
+    min-height: 50%;
 }
-.box-chat li{
+#chat-list li{
     list-style: none;
     border-bottom: lightgray 1px solid;
     padding:30px;
     padding: 9px 25px;
     transition: 1.5s linear;
 }
-.box-chat li img {
+#chat-list li img {
     width: 70px;
     border-radius: 50%;
 }
-.box-chat li:hover {
+#chat-list li:hover {
     background-color: lightslategray;
 }
 
